# python-outliers

./: .gitignore  .pre-commit-config.yaml  README.md  csv-parse.py  functions.py  loadmonth.py  new_rbob_data.csv  outliers.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  simple-text2-csv.py  sparta-csv-parse.py  test_values.txt  tests.py  values.txt
app/: csv-parse.py  functions.py  loadmonth.py  output.csv  requirements.txt  test_values.txt
cli/: csv_parse.py  functions.py  loadmonth.py
tests/: app_tests.py  test_LoadMonth.py
