# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name = plot_cli
version = 0.1.0
description = Parsing Utility for CSVs that detects outliers and plots them
long_description = file: README.md
license = GPLv3
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    PyQT5
    dateutils
    click
    numpy
    scipy

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    plot-cli = cli.csv_parse:main

[options.extras_require]
plotting = matplotlib
tests =
    pytest
    pytest-mock

[options.packages.find]
# directories you want excluded
exclude =
    app*
    examples*
    tools*
    docs*
    my_package.tests*
